# computergraphics

./: README.md
Lab1/: CMakeLists.txt
Lab1 C++/: CMakeLists.txt  main.cpp
Lab1++/: CMakeLists.txt
Lab1py/: img.py
Lab2++/: CMakeLists.txt  main.cpp
